# energy-demand-forecasting

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: 01_data_loading_and_initial_eda.ipynb
src/energy_forecasting/data/: load_data.py
